upload/style/Oxygen/Oxygen.css
/* ... */
	
.brd .txt-set .fld-input {
	display: block;
	padding: 0 0 0 1em;
	}
	
.brd .txt-set textarea {
	width: 95%;
	}
	
/* Error handling
-------------------------------------------------------------*/

.brd .req-warn {
	display: none;
	}

.brd #req-msg p em, .brd .required label span em {
	font-style: normal;
	font-weight: normal;
	}

.brd .required label span em {
	float: left;
	font-size: 0.917em;
	line-height: 1.2em;
	width: 16em;
	position: relative;
	}
	
.brd .txt-set .required label span em {
	margin-bottom: -1.2em;
	}	
	
.brd .req-error {
	display: block;
	}
	
.brd .required label span  {
	font-weight: bold;
	}
	
/*************************************************************
G - MAIN CONTENT - TOPICS AND PARSED CONTENT
**************************************************************/

/* Structure
-------------------------------------------------------------*/
	
.brd .post {
	border-style: solid;
	border-width: 1px;
	position: relative;
	margin: 1.417em;
	margin-top: -1.417em;
	}
	
.brd .firstpost, .brd .singlepost {
	margin-top: 1.417em;
	}
	
.brd .main-topic .lastpost {
	border-bottom: 0;
	}

.brd .main-topic .post {
	border-style: solid none;
	margin: 0;
	}
	
.brd  .main-topic .firstpost {
	border-top: none;
	}

.brd .posthead {
	margin-left: 18em;
	border-style: none none none solid;
	border-width: 1px;
	zoom: 1;
	}

.brd .posthead .hn {
	padding-right: 1.5em;
	padding-left: 1em;
	border-style: none none dashed none;
	border-width: 1px;
	}
	
.brd .post .posthead .post-byline a,
.brd .post .posthead .post-byline strong {
	font-size: 1.167em;
	font-weight: bold;
	text-decoration: none;
	font-style: normal;
	}

.brd .post .posthead .post-byline {
	float: left;
	width: 15.5em;
	padding: 0.5em 1em 0.5em 1.5em;
	margin-left: -19em;
	margin-top: -0.5em;
	position: relative;
	left: -1px;
	overflow: hidden;
	}

.brd .posthead .post-num {
	float:right;
	font-weight: bold;
	}

#brd-modtopic .posthead .hn {
	padding-right: 2.7em;
	}
	
.brd .posthead .post-title {
	padding: 0 1.5em 0.5em 1em;
	margin-top: -1px;
	position: relative;
	font-family: arial, helvetica, sans-serif;
	}

.brd .posthead .post-title span {
	display: block;
	width: 100%;
	overflow: hidden
	}
	
.brd .posthead .post-title a {
	font-size: 1.167em;
	text-decoration: none;
	font-weight: bold;
	}

.brd .posthead .post-title small,
.brd .posthead .post-title small a {
	font-size: 1em;
	font-weight:normal;
	white-space: nowrap;
	}
	
.brd .posthead p.item-select {
	position: absolute;
	top: 0;
	right: 0.75em;
	height: 2.5em;
	}
	
.brd .postbody {
	margin-left: 18em;
	position: relative;
	border-left-style: solid;
	border-left-width: 1px;
	padding: 0.5em 1.5em 0 1em;
	clear: both;
	}	

.brd .postfoot {
	padding-left: 18em;
	border-top-style: dashed;
	border-top-width: 1px;
	position: relative;
	}
	
.brd .postfoot .post-options {
	border-left-style: solid;
	border-left-width: 1px;
	}

.brd .postbody .post-author {
	float: left;
	width: 15.5em;
	margin-left: -19em;
	left: -1px;
	position: relative;
	display: inline;
	padding: 0 1em 0.5em 1.5em;
	overflow: hidden;
	margin-top: -1em;
	}
	
	
.brd .postbody .post-author ul {
	margin: 0;
	padding: 0 0 0.5em 0;
	list-style: none;
	}
	
.brd .post .author-ident .useravatar img {
	display: block;
	padding: 0.5em 0;
	}

.brd .post .author-ident .username {
	display: none;
	}
	
.brd .postbody .author-ident .usertitle {
	font-weight: bold;
	line-height: normal;
	}
	
.brd .postbody .author-ident .userstatus {
	padding: 0.75em 0 0.25em 0;
	margin: 0;
	line-height: 0.75em;
	width: 100%;
	}
	
.brd .postbody .author-ident .userstatus span {
	font-size: 0.917em;
	display: block;
	border-left-style: solid;
	border-left-width: 0.7em;
	text-indent: 0.5em;
	}
	
.brd .online .author-ident .userstatus span {
	font-weight: bold;
	}
	
.brd .postfoot .post-contacts {
	float: left;
	margin-left: -18em;
	width: 15.5em;
	padding: 0.5em 1em 0.5em 1.5em;
	position: relative;
	display: inline;
	left: -1px;
	}
	
.brd .postfoot .post-actions {
	padding: 0.5em 1.5em 0.5em 1em;
	text-align: right;
	display: block;
	float: right;
	}
	
.brd .postfoot .post-actions span {
	margin-left: 0.75em;
	}
	
.brd .postfoot .post-contacts span {
	margin-right: 0.75em;
	}
	
/* Content
-------------------------------------------------------------*/
	
#brd-wrap .entry-content {
	padding-bottom: 1em;
	overflow: hidden;
	width: 100%;
	font-size: 1.084em;
	}
	
#brd-wrap .entry-content ol {
	padding-left: 2.5em;
	list-style-type: decimal;
	}
	
#brd-wrap .entry-content ol p,
#brd-wrap .entry-content ul p {
	padding: 0;
	}
	
#brd-wrap .entry-content ol.alpha {
	list-style-type: upper-alpha;
	}
	
#brd-wrap .entry-content h5, #brd-wrap .entry-content h5 * {
	font-weight: bold;
	font-size: 1.084em;
	padding: 0.5em 0;
	}
	
#brd-wrap .entry-content img {
	vertical-align: text-top;
	}
	
#brd-wrap .entry-content .quotebox,
#brd-wrap .entry-content .codebox {
	border-style: solid;
	border-width: 1px;
	margin: 0.75em 1em;
	padding: 1em 0.75em;
	}
	
#brd-wrap .entry-content blockquote {
	overflow: hidden;
	width: 100%;
	}
	
#brd-wrap .entry-content .quotebox cite {
	display: block;
	font-style: normal;
	font-weight: bold;
	}
	
#brd-wrap .entry-content pre {
	margin: 0;
	max-height: 35em;
	min-height: 2em;
	overflow: auto;
	padding: 0 2% 0.1em 0;
	width: 98%;
	}	

#brd-wrap .entry-content img {
	max-width: 100%;
	}
	
#brd-wrap .entry-content span.bbu {
	text-decoration: underline;
	}
	
#brd-wrap .entry-content br, #brd-wrap .sig-demo br, #brd-wrap .user-box br, #brd-wrap .main-message br {
	display: inline;
	}
	
.brd .sig-content {
	padding-top: 1em;
	}
	
.brd span.sig-line {
	display: block;
	width: 200px;
	border-top-style: solid;
	border-top-width: 1px;
	padding-bottom: 0.5em;
	}
/* ... */

